Devided control chapter into seperate .tex files

--- a/control/control.tex
+++ b/control/control.tex
@@ -26,546 +26,16 @@
             \label{tbl:controller_summary}
         \end{table}
     
+    \input{control/pid}
 
-    \FloatBarrier\section{Cascaded PID}
+    \input{control/lqr}
 
-        \paragraph
-        This section gives a brief overview of the PID control architecture.
-        The controllers are designed based on a linearised model of the multirotor without a payload.
-        The design process used to determine the controller gains are also discussed in this section.
-        Finally the controllers are implemented with MATLAB and Simulink and are verified with practical flight data.
-        % ?? remember to add practical verification
-        
-        \paragraph
-        The PX4-Autopilot was chosen as the multirotor flight-stack because it is open-source and widely used in industry and research.
-        The default PX4 control architecture for a multirotor consists of multiple cascaded PID controller loops.
-        This is devided into two main categories, the inner loop attitude controllers and the outher loop translational controllers.
+    \input{control/mpc}
 
-        \input{control/diagrams/pid_architecture.tex}
-        
-        % ?? Fix notation of symbols and define them
-
-        \paragraph
-        Figure~\ref{fig:pid_architecture} shows a high level overview of the PX4 control architecture, but does not show state feedback. 
-        The inner-most element is the mixer, which converts virtual actuator commands to actuator thrust commands.
-        % This is achieved with simple matrix multiplication.
-        The attitude controller includes the angle and angular rate controllers, which send sommands to the mixer.
-        The translational controller consists of the position and velocity controllers, which send commands to the attitude controller.
-        The rate of each controller is also shown in Figure~\ref{fig:pid_architecture}.
-        % The inner loop controllers deal with the fastest dynamics and are required to run at the highest rate.
-        % The translation controllers control slower dynamics. hence they run a lower rate.
-
-        \FloatBarrier\subsection{Angular rate controller}
-
-            \paragraph
-            Three seperate linear PID controllers are used to the control angular rate of the multirotor in the pitch, roll, and yaw axis of the body frame.
-            The angular rate controller receives angular rate estimates from the PX4 state estimator, and outputs virtual actuator commands to the mixer.
-            Figure~\ref{fig:angular_rate_controller} shows a diagram of the PX4 angular rate controller.
-            
-            \input{control/diagrams/angular_rate_controller.tex}
-
-            \paragraph
-            Derivative kick.
-            LPF.
-            Saturation.
-            
-            \paragraph
-            Classical control theory was used by \cite{Grobler2020} to design the controller gains of the practical multirotor, Honeybee.
-            This same process is also explained in detail by \cite{Erasmus2020}.
-            The controller gains were designed for a transient response that is as fast as possible, while retaining fast disturbance rejection, and minimal overshoot.            
-            It was determined by \cite{Grobler2020} that the default PX4 angular rate controller gains of the ZMR250 airframe provide excellent control for Honeybee and satisfy these design requirements.
-            
-            \paragraph
-            For a \SI{1}{\radian/\second} step responce, the pitch rate controllers result in a 
-            3.6~\% overshoot, 
-            \SI{0.024}{\second} rise time, 
-            \SI{0.8}{\second} for a 2~\% settling time, 
-            and \SI{138}{\radian/\second} bandwidth \cite{Grobler2020}.
-            These gains are well suited for Honeybee and will also be implemented in this work.
-            The default roll-rate and yaw-rate controller gains are also implemented.
-
-        \FloatBarrier\subsection{Angle controller}
-
-            \paragraph
-            The pitch, roll, and yaw angles are controlled by the angle controller in the body frame.
-            A quaternion based controller is implemented by PX4 for angle control based on work by \cite{Brescianini2013}.
-            The structure and design of this controller is well explained by \cite{Grobler2020}, \cite{Erasmus2020}, and \cite{Slabber2020} and is only briefly discussed here.
-            
-            \paragraph
-            For the control law proposed by \cite{Brescianini2013}, the error quaternion is calculated as:
-            \begin{equation}
-                \bar{\bm{q}}_e = \bar{\bm{q}}^{-1} \cdot \bar{\bm{q}}_{sp},
-            \end{equation}
-            where $\bar{\bm{q}}_e$ is the quaternion error, 
-            $\bar{\bm{q}}$ is the attitude quaternion of the multirotor,  
-            and $\bar{\bm{q}}_{sp}$ is the attitude quaternion setpoint.
-            The resulting control law is given as:
-            \begin{equation} \label{eq:angle_law}
-                \bm{\varOmega}_{sp} = 2 \bm{P}_{q} \mbox{sgn}(q_{0_e}) \bm{q}_{v_e} , 
-                \qquad \qquad \mbox{sgn}(q_{0_e}) = 
-                \begin{cases}
-                    1,  & \quad q_{0_e}  \geq   0 \\
-                    -1, & \quad q_{0_e}  <      0
-                \end{cases} 
-            \end{equation}
-
-            %  ?? Fix symbols be matrix and correspond with diagram and explain matrix
-            
-            \paragraph
-            The implementation of this control law is illustrated in Figure~\ref{fig:angle_controller}.
-            The attitude setpoint is taken as input, the current attitude is received from the PX4 estimator, and the resulting anglular rate setpoint is produced as the output.
-
-            \input{control/diagrams/angle_controller.tex}
-
-            \paragraph
-            An integrator is not required in this controller, because it is placed between the velocity and angular rate controllers which both include integrators to reject steady-state disturbacnes \cite{Erasmus2020}.
-            Therefore only a proportional term is applied in this control law.
-            The proportional gain was designed by \cite{Grobler2020} for a faster transient response and bandwidth than the default ZMR250 gain.
-            This results in a \SI{1}{\radian} step response with a
-            0~\% overshoot, 
-            \SI{0.3}{\second} rise time, 
-            \SI{0.47}{\second} for a 2~\% settling time, 
-            and \SI{11}{\radian/\second} bandwidth \cite{Grobler2020}.
-            This still has a good time-scale seperation from the angular rate controller, which has a bandwidth of \SI{138}{\radian/\second}.
-            The same gains designed by \cite{Grobler2020} will be used in this work.
-
-        \FloatBarrier\subsection{Translational controller}
-
-            Mention acceleration to attitude conversion.
-
-            Explain velocity controller
-
-            
-            The translational controller consists of the position and velocity conyrollers.
-            Position control is not required for training data in this work, therefore it will not be discussed in this section.
-            For more details about the PX4 position control implementation and design, readers are refered to the work by \cite{Grobler2020}.
-            A diagram of the North velocity controller is shown in Figure~\ref{fig:velocity_controller}.
-            The West and Down velocity controllers duplicate the same configuration.
-
-            \input{control/diagrams/velocity_controller.tex}
-
-            \paragraph
-            Recall from Chapter~\ref{chap:system_id}, that the cascaded PID controller is used for velocity step inputs in the training data phase for system identifcation.
-            The system identification methods produce linear models, which are used in swing damping controllers to minimise the payload angles during flight.
-            Therefore training data with large payload angles is undesirable, because it is very different from the vector subspace that the swing damping controllers will operate in.
-            The velocity controller gains used for Honeybee by \cite{Grobler2020} result in aggressive veloicty responses, which produces large payload swing angles.
-            Therefore the velocity controller gains are redesigned for a slower transient reponse which results in smaller payload swing angles.
-
-            \paragraph
-            The trasfer function, $G_{V_N}(s)$, of the plant considered for North velocity control was derived by \cite{Erasmus2020}.
-            As a brief summary, the derivation starts by linearising the multirotor pitch rate dynamics at hover with the small angle approximation.
-            The closed-loop transfer function including the pitch rate controller is then determined.
-            This function is then used in the derivation of the closed-loop transfer function of the pitch dynamics, which includes the pitch angle controller.
-            Finally, this is used to derive the open-loop, North velocity transfer function, $G_{V_N}(s)$, with $A_{N,sp}(s)$ as input and $V_N$(s) as output 
-            For more detail regarding this derivation, readers are refered to the work by \cite{Erasmus2020}.  
-
-            \begin{figure}
-                \captionsetup[subfigure]{justification=centering}
-                \centering  
-                \input{control/plots/rootlocus_open_loop.tex} % subfigure
-                \input{control/plots/rootlocus_closed_loop.tex} % subfigure
-                \caption{Root locus plots of the North velocity controller}
-                \label{fig:rootlocus_subfigs}  
-            \end{figure}
-
-            \input{control/plots/pid_tuning_plot.tex}
-
-            Figure~\ref{fig:pid_tuning_plot} shows ...
-            
-            % ?? Check connection with system id chapter for training data controller
-
-    \FloatBarrier\section{LQR} \label{sec:lqr}
-
-        \paragraph
-        LQR is a well-kown technique, ...
-        % LQR is \cite{get cite}
-        An LQR for North velocity control is presented in this section. 
-        This controller structure can be duplicated for East veloicty control.
-        Full-state feedback. Effect of EKF not included.
-        
-        \paragraph
-        An LQR does not inherently apply integral action and does not achieve zero steady-state tracking error in the presence of disturbacnes.
-        Therefore the state vector is augmented with an integral state of the velocity error, $\mathcal{V}_N$, such that:
-        \begin{equation}
-            \dot{\mathcal{V}}_N = V_{N,sp} - V_N
-        \end{equation}
-        
-        \paragraph
-        The North velocity dynamics were derived and linearised in Chapter~\ref{chap:modelling} 
-        to produce a state-space model which will be used to design the LQR.
-        It is asumed that all model parameter are known before a flight, 
-        except the payload paramaters, $l$ and $m_p$, which are estimated in the system identification phase.
-        The augmented state space model which includes the integral state is given by:
-        \begin{equation}
-            \dot{\bm{x}}_A = \bm{A}_A \bm{x}_A + \bm{B}_A \bm{u}_A ,
-        \end{equation}
-        where
-        \begin{align}
-            \bm{x}_A &= 
-                \begin{bmatrix}
-                    \mathcal{V}_N & V_N & \theta & \dot{\theta}
-                \end{bmatrix}^T, \\
-            \bm{u}_A &= 
-                \begin{bmatrix}
-                    A_{N,sp}
-                \end{bmatrix}, \\
-            \bm{A}_A &= 
-                \begin{bmatrix}
-                    0 & -1 & 0 & 0 \\
-                    0 & \frac{ -c_{air} }{m_Q} & \frac{ m_p \cdot g}{m_Q} & \frac{c_{\theta}}{(l\cdot m_Q)} \\
-                    0 & 0 & 0 & 1 \\
-                    0 & \frac{ c_{air} }{ (m_Q \cdot l) } & \frac{ (m_p+m_Q) \cdot g}{(m_Q \cdot l) } & \frac{ -c_{\theta} \cdot (m_p+m_Q)}{(l^2 \cdot m_Q \cdot m_p)}
-                \end{bmatrix}, \mbox{ and} \\
-            \bm{B}_A &= 
-                \begin{bmatrix}
-                    0 \\ 
-                    \frac{1}{m_Q} \\
-                    0 \\
-                    \frac{-1}{(m_Q \cdot l)} \\
-                \end{bmatrix}.
-        \end{align}
-
-        \paragraph
-        The LQR control law is defined as:
-        \begin{equation} \label{eq:lqr_control_law}
-            \bm{u}_A = \bm{K}_{lqr} ( \bm{x}_{A,sp} - \bm{x}_A ) ,
-        \end{equation}
-        where $\bm{K}_{lqr}$ is the LQR gain, and $\bm{x}_{A,sp}$ is the augmented state vector setpoint.
-        Only $V_{N,sp}$ has a non-zero value, hence 
-        $\bm{x}_{A,sp} = \left[ 0~~V_{N,sp}~~0~~0 \right]^T$.
-        
-        \paragraph
-        Furthermore, the LQR considers the cost function:
-        \begin{equation}\label{eq:lqr_cost_function}
-            J( \bm{u}_A ) = \int_{0}^{ \infty } \left( \bm{X}_A^T \bm{Q} \bm{X}_A + \bm{u}_A^T \bm{R} \bm{u}_A \right) dt ,
-        \end{equation}
-        where $\bm{Q}$ is the state weighting matrix,
-        and $\bm{R}$ is the input weighting matrix.
-        The LQR gain, $\bm{K}_{lqr}$, 
-        is therefore determined by substituting Equation~\ref{eq:lqr_control_law} into Equation~\ref{eq:lqr_cost_function} and minimising the cost function.
-
-        \paragraph
-        The LQR control performance can be manually tuned by changing the state and input weights in $\bm{Q}$ and $\bm{R}$ respectively.
-        The weighting of each state variable can be weighted according to tracking importance.
-        For example, if the weighting of $V_N$ is small in comparison to the weighting of $\theta$, 
-        the controller will produce a slow velocity response with small payload swing angles.
-        For the values in $\bm{R}$, if the weighting of an input variable is large, 
-        the controller will output lower control values for that variable.
-
-        \paragraph
-        The general design requirements of the LQR are to 
-        produce a fast velocity response with zero-steady-state error while damping the payload oscillations quickly.
-        The priority is to produce a smooth trajectory with minimal oscillation, however a reasonably fast response time is still required.
-        An iterative tuning approach was used to determine the $\bm{Q}$ and $\bm{R}$ matrix entries that produce a good performance.
-        The final LQR weightings were selected as:
-        \begin{equation}
-            \bm{Q} = diag([0.1~~10~~0~~100]),~~~\bm{R} = 13 .
-        \end{equation}
-        Note that the weight of the payload angle variable is 0.
-        This is because the payload angle will have a non-zero steady-state value at constant velocity, $V_N$, due to aerodynamic drag.
-        The payload angle is therefore damped by placing a heavy weighting on the derivative of the payload angle instead.
-
-        \input{control/plots/lqr_tuning_plot.tex}
-
-        \paragraph
-        Figure~\ref{fig:lqr_tuning_plot} shows a plot of the simulated LQR velocity response with different payload parameters.
-        It is clear that the controller damps the payload angles well and produces a smooth trajectory with different payloads.
-        The same matrixes weighting are used 
-        For each different payload, 
-        the payload parameters are estimated, 
-        the state-space model is populated, 
-        and the LQR gain is calculated using the same weighting matrix values.
-        The controller performance, including disturbance rejection, will be further discussed in Section~\ref{sec:control_implementation}.
-
-    \FloatBarrier\section{MPC} \label{sec:mpc}
-
-        MATLAB
-        QP solver
-        C++ generation
-
-        \input{control/plots/mpc_tuning_plot.tex}
 
 } % End tikz set for controllers overview
 
-{
-\tikzset{external/figure name/.add={control_implementation/}{}}
             
-    \FloatBarrier\section{Implentation and results}
-    \label{sec:control_implementation}
+    \input{control/control_implementation.tex}   
 
-        \paragraph
-        After the system identification phase, active swing damping control can be applied
-        to the multirotor and payload system.
-        The control architectures are summarised in Table~\ref{tbl:controller_summary} 
-        by pairing the system identification techniques along with the appropriate controllers.
-        In this work, the \emph{MPC architecture} refers to the entire control implementation, 
-        which includes the data-driven system identification process and the resulting MPC based on the estimated model.
-        Likewise, the \emph{\gls{LQR} architecture} includes the white-box modelling, the parameter estimation process, and the resulting \gls{LQR} determined from the system identification model.
-        
-        \paragraph
-        It was firstly shown in Chapter~\ref{chap:system_id} that the system identifcation techniques worked in simulation.
-        
-        \FloatBarrier\subsection{Simple suspended payload} \label{sec:simple_payload_control}
-
-            \paragraph
-            The modelling assumptions of the white-box model discussed in Chapter~\ref{chap:modelling} 
-            defines a point-mass suspended with a rigid cable which is attached to the \gls{CoM} of the multirotor.
-            This is a simplisitic suspended payload model but represents the dynamics of many practical payloads well.
-            In this section, the simulated payload model complies will all these assumptions.
-            The simulation model used in this section was verified with practical data in Section~\ref{sec:model_verification}.
-            This is also the payload model used for simulations with an \gls{LQR} controller by \cite{Erasmus2020} and \cite{Slabber2020}
-
-            \input{control/plots/compare_control_vel.tex}
-
-            \paragraph
-            From simulation results, it appears that both the \gls{MPC} and \gls{LQR} effectively damp the payload oscillations while controlling the velocity of the multirotor.
-            Figure~\ref{fig:compare_control_vel} shows the velocity step responces of the MPC, \gls{LQR} and PID controllers for a multirotor with a suspended payload.
-            From Figure~\ref{fig:compare_control_vel} it is clear that both the \gls{LQR} and \gls{MPC} controllers actively damp the velocity oscillation caused by the swinging payload.
-            The \gls{PID} controller does not consider the payload angle, hence the oscillations are not damped as strongly.
-
-            \paragraph
-            For the \gls{MPC} and LQR, the respective models were first generated in the training phase of the simulation.
-            Thereafter, the \gls{MPC} and \gls{LQR} were manually and iteratively tuned to produce a step response with a similar response time and overshoot.
-            The PID response shown uses the same controller gains used in the training phase.
-
-            % MPC:
-            % vel weight = 2;
-            % theta weight = 0;
-            % dtheta weight = 10; 
-            % mv weight = 1;
-            % mvrate weight = 5;
-            % Ty = 5;
-            % Tu = 3;
-
-            % LQR:
-            % LQR.Q = diag([0.3 10 0 100]); 
-            % LQR.R = 8
-
-            \input{control/plots/compare_control_theta.tex}
-
-            \paragraph
-            Figure~\ref{fig:compare_control_theta} shows the payload angle data of the velocity step response.
-            Both the \gls{MPC} and \gls{LQR} damp the payload angle well and the osciilations cease after only two or three swings.
-            In this case, the \gls{MPC} response results in a smaller initial swing angle, however, this is dependant on the specific tuning of each controller.
-            The \gls{LQR} can also be tuned to produce a similar swing angle.
-
-            \input{control/plots/compare_control_acc_sp.tex}
-
-            \paragraph
-            Figure~\ref{fig:compare_control_acc_sp} shows the acceleration setpoint commanded by the two controllers for this step response.
-            This is probably due to the inherant similarity between the controller implementations as discussed in Section~\ref{sec:mpc}.
-            The similarity in the acceleration setpoint responses also show that the energy expended in a velocity steps are roughly equal for these two controller implementations.
-            However, this is also highly dependant on the weightings used in optimastion problem of both controllers.
-            Both controllers also produce a non-zero steady-state setpoint as expected, which is required to counter areodynamic drag.
-
-        \FloatBarrier\subsection{Different payload parameters}
-
-            \paragraph
-            The system identification and control implementations are required to perform well with different unknown payload parameters.
-            Therefore, numerous flights with a range of different payload were simulated, the respective models were trained and the controllers were implemented.
-            Figure~\ref{fig:compare_control_vel_l1} and Figure~\ref{fig:compare_control_vel_l05} show velocity step responces with \gls{LQR} and \gls{MPC} implentations with two payloads flights.
-            Both the parameter estimation with \gls{LQR} implementation, and the DMDc with \gls{MPC} implementation, handle flights with different cable lengths and payload masses well.
-            In each flight, \gls{LQR} and \gls{MPC} damp the payload oscillations and control the multirotor velocity well.
-  
-            \input{control/plots/compare_control_vel_l-1.0_mp-0.2.tex} % subfigure
-
-            \input{control/plots/compare_control_vel_l-0.5_mp-0.1.tex} % subfigure
-                        
-            \paragraph
-            The controllers were not specifically tuned for each simulation.
-            Instead, the same controller parameters were used for these simulations as for the simulations in Section~\ref{sec:simple_payload_control}.
-            This shows that each control architecture is adaptibile to different payload parameters without manual intervention.
-
-        \FloatBarrier\subsection{Variation of other system parameters}
-
-            \paragraph
-            The control architectures have been shown to be adaptable to variationd in the payload parameters.
-            However, changing other system parameters may affect the performance of the different controllers. 
-            As mentioned in Chapter~\ref{chap:system_id}, a disadvantage of the white-box system identification approach used by the LQR,
-            is that parameter estimation techniques need to be manually designed for each unknown parameter.
-            In the specific implementation, the \gls{LQR} model assumes that the multirotor mass is known.
-            Hence, changing the mass of the multirotor is detrimental to the accuracy of plant model and therefore affects the \gls{LQR} performance.
-            In contrast, the data-driven system identification method for the MPC plant model does not rely on such modelling assumptions.
-            
-            \begin{figure}
-                \captionsetup[subfigure]{justification=centering}
-                \centering  
-                \input{control/plots/compare_control_vel_mq_changed.tex}
-                \input{control/plots/compare_control_theta_mq_changed.tex}
-                \caption{Velocity step responses with the multirotor mass decreased by \SI{0.25}{\kilo\gram}
-                ($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
-                \label{fig:mq_changed} 
-            \end{figure}
-
-            \paragraph
-            Simulations were performed with an altered multirotor mass to demonstrate how the control architectures handle changes in other system parameters.
-            Figure~\ref{fig:mq_changed} shows the velocity step responses of the \gls{PID}, \gls{MPC} and \gls{LQR} implementations with an altered multirotor mass.
-            For these simulations, the original multirotor mass, $m_Q =$~\SI{0.796}{\kilo\gram}, 
-            was decreased by \SI{0.250}{\kilo\gram}, 
-            resulting in a new multirotor mass of, $m_Q =$~\SI{0.546}{\kilo\gram}.
-            The same system identification processes were naively followed as in the previous sections, without prior knowledge of the change in $m_Q$.
-            The same tuned controller parameters were also used.
-
-            \paragraph
-            In Figure~\ref{fig:mq_changed} it appears that the \gls{LQR} results in lower payload oscillations than the PID controller
-            but induces higher frequency oscillations.
-            This results in a jittery velocity response with the \gls{LQR} and is undesirable for a multirotor flight.
-            The \gls{LQR} control performance has degraded because the dynamics of the \gls{LQR} plant model differs significantly from the actual dynamics. 
-            In contrast, the MPC still results in a smooth velocity profile and damps the payload oscillations effectively, as in previous simulations.
-            This is expected since the system identification model used by the MPC included the effect of the changed mass by estimating the entire model without considering indivdual parameters.
-            
-            \paragraph
-            It should be noted that another mass estimator can be implemented to estimate $m_Q$ in a flight stage before the payload is added.
-            However, this involves manually redesigning the system identification procedure for each new unknown system parameter.
-            In these simulations, it was shown that changing non-estimated system parameters in the white-box approach can be detrimental to the control performance.
-            Unlike the white-box approach, the black-box approach handles changes in different system parameters well without prior knowledge of these parameters.
-
-        \FloatBarrier\subsection{Wind disturbance}
-
-            \paragraph
-            For zero steady-state error with a practical system, a controller needs to apply some form of disturbance rejection.
-            Practical systems experience unmeasured disturbances and other deviations which are not accounted for by the plant model.
-            For example, a mean force applied by wind could prevent zero steady-state tracking error of the multirotor velocity without disturbance rejection.
-            As discussed in Section~\ref{sec:lqr}, an integral state variable was added to the \gls{LQR} plant model for integral action of the multirotor velocity tracking.
-            As discussed in Section~\ref{sec:mpc}, an unmeasured input was added to the \gls{MPC} plant model with a disturbance estimator to apply integral action to the multirotor velocity.
-
-            \input{control/plots/compare_control_vel_wind_disturbance.tex}
-
-            \paragraph
-            Figure~\ref{fig:compare_control_vel_wind_disturbance} shows the responses of the controllers from Section~\ref{sec:simple_payload_control} with a constant wind disturbance starting at \SI{8}{\second}.
-            At Time~=~\SI{8}{\second}, a wind speed of \SI{2}{\metre/\second} is applied to the simulation model as an unmeasured step input.
-            This mostly affects the multirotor velocity because the wind causes a greater drag force on the multirotor, 
-            hence a larger acceleration setpoint is required to maintain a constant velocity.
-            For both system identification approaches, the models were trained without wind.
-
-            \paragraph
-            It appears that the MPC shows better disturbance rejection than the \gls{LQR} when using the controller parameters which were tuned for good performance in Section~\ref{sec:simple_payload_control}.
-            This is primarily because the weighting of the integral variable in the \gls{LQR} optimisation was minimised to reduce overshoot.
-            The integral weighting can be increased to improve integral action at the expense of increasing overshoot in the velocity response.
-
-            \input{control/plots/improve_lqr_integrator.tex}
-
-            \paragraph
-            Figure~\ref{fig:improve_lqr_integrator} shows the \gls{LQR} responses with different integral state weightings.
-            The other state variable weights are kept constant for each response.
-            It is clear that the settling time and disturbance rejection of the \gls{LQR} improves for larger integral state weighting.
-            However, the overshoot increases significantly because of the integrator build-up at the start of the response.
-            % The overshoot could be decreased by adding a velocity derivative state to the \gls{LQR} model, but this will involve ex
-
-            \paragraph
-            In contrast to the LQR, the \gls{MPC} shows good disturbance rejection while maintaining a low overshoot.
-            This is because the disturbance estimator applies integral action which depends on the deviation of the actual dynamics from the plant model.
-            whereas the \gls{LQR} applies integral action proportional to the integral of the tracking error.
-            Therefore the MPC implementation produces less integrator build up which results in a lower overshoot.
-
-            % Could add effect of bad models. ??
-
-        \FloatBarrier\subsection{Dynamic payload}
-
-            \paragraph
-            As discussed in Section~\ref{sec:dynamic_payload}, some payloads have dynamics that differ significantly from a suspended rigid mass.
-            In this work, these payloads are referred to as dynamic payloads.
-            An example of such a payload is an elongated payload, which can be represented by a double pendulum model. 
-            
-            \paragraph
-            In Section~\ref{sec:dynamic_payload}, the proposed system identification techniques were tested on simulated flight data with such a payload.
-            For the white-box system identification approach, it was shown that the white-box model captures the dynamics of the dominant frequency of the oscillating payload but ignores the higher frequency dynamics.
-            For the black-box approach, a prediction model was generated from a set of training data.
-            This model accurately predicted the multirotor and payload dynamics, including the low and high-frequency dynamics, of a set of testing data.
-
-            \input{control/plots/compare_control_vel_dynamic.tex}
-
-            \paragraph
-            For the simulations in this section, accurate system identification models were generated as described in Section~\ref{sec:dynamic_payload} and used in the MPC and \gls{LQR} controllers.
-            Figure~\ref{fig:compare_control_vel_dynamic} shows the reslting controller responses with a dynamic payload.
-            It appears that the velocity responses of both the \gls{LQR} and the MPC are less smooth than with a simple suspended payload and show small velocity oscillations.
-            
-            \input{control/plots/compare_control_theta_dynamic.tex}
-            
-            \paragraph
-            Figure~\ref{fig:compare_control_theta_dynamic} shows the suspension cable angle for a velocity step response.
-            It appears that the \gls{LQR} and MPC damp the payload oscillations with a similar response time.
-            However, the superimposed, high-frequency oscillations are smaller in the \gls{LQR} response than in the MPC response.
-            The \gls{LQR} naively damps the payload oscillations because its controller gain is determined from the same dynamical model as for a simple suspended payload.
-            Because the angle of the payload relative to the cable is not measured or considered in the \gls{LQR} plant model, it does not directly damp these high-frequency oscillations.
-            The MPC should account for the superimposed frequency and provide a smoother response than the \gls{LQR}, since the black-box model includes the double pendulum dynamics in its prediction model.
-            Therefore it is expected that the MPC optimiser determines a smooth trajectory that damps both the low and high-frequency oscillations. 
-
-            \input{control/plots/mpc_vel_prediction_vs_actual.tex}
-
-            \paragraph
-            However, the MPC does not provide a smooth velocity or payload angle response.
-            Even though the MPC generates a smooth optimised trajectory with the plant model, the actual response of the simulated system differs from this prediction.
-            Figure~\ref{fig:mpc_vel_prediction_vs_actual} shows the predicted velocity of the MPC optimiser, given the velocity setpoint and initial condition at Time~=~\SI{1.1}{\second}.
-            The actual simulated response, resulting from replanning at every time-step with the MPC, is also shown in Figure~\ref{fig:mpc_vel_prediction_vs_actual}.
-            For the first part of the velocity response, the the actual response matches the optimised trajectory well.
-            However, after Time~=~\SI{3.2}{\second}, the predicted dynamics is noticeably different from the actual response to the optimised input sequence.
-
-            \input{control/plots/mpc_theta_prediction_vs_actual.tex}
-
-            \paragraph
-            Figure~\ref{fig:mpc_theta_prediction_vs_actual} shows the predicted and actual payload angle response for this simulation, starting at the same time-step.
-            The MPC optimiser also determined a smooth trajectory for the payload angle, but the actual response differs significantly from this trajectory.
-            Even though the black-box model predictions accuratly matched the testing data, Figure~\ref{fig:mpc_vel_prediction_vs_actual} and Figure~\ref{fig:mpc_theta_prediction_vs_actual}  
-            show that the model is not an accurate approximation of the simulated system for all values of the state and input vectors. 
-
-            \paragraph
-            The estimated model provides accurate predictions in the subspace of state and input vectors considered in the training data.
-            However, the MPC generates trajectories that are beyond this subspace and the model needs to extrapolate outside of the training subspace.
-            The multirotor with a simple suspended payload represents a mildly non-linear system, hence the linear approximation was effective for control with an MPC.
-            However, a double pendulum system reveals highly non-linear dynamics with multiple fixed points.
-            This system also includes an unmeasured state variable which adds complexity to dynamics.
-            
-            \paragraph
-            From the results in Figure~\ref{fig:mpc_vel_prediction_vs_actual} and Figure~\ref{fig:mpc_theta_prediction_vs_actual}
-            it appears that the data-driven linear model results in acceptable control with an MPC.
-            However, the actual dynamics do not follow the optimised trajectory of the MPC and the MPC does not outperform the \gls{LQR} implementation.
-
-            % ?? Add discussion of how it could be improved:
-            % Constrain MPC to stay within subspace
-            % Adaptive MPC to include larger subspace
-
-    \FloatBarrier\section{Conclusion}
-
-        \paragraph
-        From simulations without wind disturbances, it was shown that the MPC and \gls{LQR} architectures deliver similar control performances for a range of different payload parameters.
-        Both controllers result in a similar response time and velocity overshoot, and the payload angle is damped well by both controllers.
-        Therefore, in the absence of wind, 
-        the control performance does not conclusively differentiate between the \gls{LQR} and MPC architectures for a simple suspended payload.
-        As expected, the PID controller does not provide acceptable control of the multirotor with a suspended payload and does not actively damp the payload oscillations.
-        
-        \paragraph
-        Both the \gls{LQR} and the MPC architectures handle different payload parameters well.
-        Even though the parameter estimation techniques (used with the LQR) did not consider the mass of the multirotor ($m_Q$),
-        the \gls{LQR} architecture still provided acceptable swing damping control with small changes in $m_Q$.
-        However, it was shown that the \gls{LQR} architecture produces an undesirable control performance for large changes in $m_Q$.
-        Therefore, parameter estimation procedure will need to be redesigned to account for such changes in other system parameters.
-        However, the data-driven approach does not rely on modelling assumptions, hence the MPC still provides good control performance for different values of $m_Q$.
-        
-        \paragraph
-        Both the \gls{LQR} and the MPC effectively rejected the unmeasured input disturbance caused by wind, resulting in zero steady-state tracking error for the multirotor velocity.
-        However, the \gls{LQR} implementations which are tuned for effective disturbance rejection result in large velocity overshoots due to the integrator build-up.
-        The MPC implementation applies integral action with a disturbance estimator and achieves zero steady-state error without increasing the velocity overshoot.
-
-        \paragraph
-        For simulations with a dynamic payload, both the \gls{LQR} and MPC effectively applied swing damping control.
-        However, there the trajectories were not as smooth as with the simple suspended payload.
-        Even though the simulated dynamics differed significantly from the simple suspended payload model used by the LQR,
-        the \gls{LQR} still managed to damp the payload oscillations quickly. 
-
-        \paragraph
-        The MPC also managed to damp the payload oscillations, but did not conclusively outperform the \gls{LQR}.
-        Even though the estimated model used by the \gls{MPC} showed good prediction accuracy with the given testing data set, 
-        the actual system response did not follow the predicted trajectory of the MPC well.
-        It appears that the optimised trajectory of the MPC is beyond the vector subspace where the linear model provides an accurate approximation of the non-linear dynamics.
-        % Therefore, the proposed \gls{DMDc} implementation does not provide a sufficient linear model approximation for effective MPC control of such a dynamic payload.
-        Therefore, an improved data-driven system identification model, which provides an accurate approximation over a larger vector subspace, 
-        is required for improved MPC control of such a dynamic payload.
-
-        \paragraph
-        The advantage of the \gls{LQR} architecture is that it is computationally simple in comparison to an MPC.
-        However, the \gls{LQR} architecture is designed for a specific system configuration and only accounts for chnages in specific system parameters. 
-        In contrast, the MPC architecture provides a good general solution for different system configurations without considering individual parameters and without a priori modelling.
-        
-} % end of tikz set
     
