--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -5,6 +5,9 @@
 \chapter{System identification}
 \label{chap:system_id}
 
+% ?? Do i explain SITL + Gazebo anywhere?
+% ?? And clear difference to MATLAb and Simulink??
+
     \paragraph
     System identification is the process of creating a mathematical model of a dynamical system 
     by using input and output measurements of that system.
